import 'dart:ui';

class Label {
  const Label({required this.name, required this.color});
  final String name;
  final Color color;
}
